# sd-netflix-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py  002_seed.py
data/segments/: mock_1080p.ts  mock_240p.ts  mock_480p.ts  mock_720p.ts
docs/: mvp-scope.md  system-design.md
src/netflix/: config.py  database.py  main.py
src/netflix/models/: __init__.py  account.py  base.py  cast.py  genre.py  playback.py  profile.py  segment.py  title.py
src/netflix/routers/: __init__.py  accounts.py  health.py  home.py  playback.py  profiles.py  search.py  streaming.py  titles.py
src/netflix/schemas/: __init__.py  account.py  home.py  playback.py  profile.py  search.py  title.py
src/netflix/services/: __init__.py  account_service.py  catalog_service.py  playback_service.py  profile_service.py  search_service.py  streaming_service.py  title_service.py
tests/: conftest.py  test_account_service.py  test_playback_service.py  test_profile_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_catalog_homepage.py  test_fr2_search.py  test_fr3_abr_streaming.py  test_fr4_playback_resume.py  test_fr5_profile_management.py
